--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,22 @@
 @import "@fluentui/react/dist/css/fabric.min.css";
+.calendar-history {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+}
 .history-item {
-  display: inline-block;
-    margin: 0 20px 20px 0;
-    box-sizing: border-box;
-    box-shadow: none;
-    padding: 2px 5px;
-    border-radius: 5px;
-    color: #fff;
-    cursor: pointer;
-    width: 150px;
-    text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 20px 20px 0;
+  box-sizing: border-box;
+  box-shadow: none;
+  padding: 2px 5px;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+  width: 150px;
+  text-align: center;
 }
 .hide {
   opacity: 0.3;
