--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 40px;
   margin: 0 20px 20px 0;
   box-sizing: border-box;
   box-shadow: none;
