--- a/src/components/EventDetails/EventDetails.css
+++ b/src/components/EventDetails/EventDetails.css
@@ -11,11 +11,47 @@
 }
 .event-details .ms-Dialog-main .ms-Dialog-content {
   max-height: 750px;
-  padding: 5px;
+  padding: 0;
   overflow: auto;
 }
 .event-details .ms-Dialog-main .ms-Dialog-content .ms-Grid-row {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
+}
+.event-details .form-header {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
+  background-image: url("../../assets/header1.png");
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+.event-details .form-header .event-title {
+  padding: 4px 22px;
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+}
+.event-details .form-footer {
+  width: 100%;
+  height: 60px;
+  margin: 20px 0 0 0;
+  background-image: url("../../assets/footer1.png");
+  background-position: center;
+  background-size: 100%;
+}
+.event-details .action-block {
+  text-align: right;
+  padding: 0px 24px 0;
+}
+.event-details .action-block button {
+  margin-right: 5px;
+}
+.event-details .ms-Grid {
+  padding: 0px 24px 24px;
+}
+.event-details .ms-Dialog-inner {
+  padding: 0;
 }
 
 @media (max-width: 1366px) {
@@ -24,6 +60,6 @@
     width: calc(100% - 20px);
   }
   .event-details .ms-Dialog-main .ms-Dialog-content {
-    max-height: 500px;
+    max-height: 600px;
   }
 }
